# string

./: CMakeLists.txt  README.md
.github/workflows/: build.yaml
cmake/: cxx_core_stringConfig.cmake.in  stringConfig.cmake.in
include/core/string/: compare.h  ends_with.h  fixed.h  from_chars.h  join.h  json.h  lexical_cast.h  lexical_cast_stl.h  remove_prefix.h  replace.h  slurp.h  split.h  starts_with.h  string.h  tolower.h  trim.h
src/core/string/: compare.cpp  ends_with.cpp  join.cpp  lexical_cast.cpp  remove_prefix.cpp  replace.cpp  slurp.cpp  split.cpp  starts_with.cpp  string.cpp  tolower.cpp  trim.cpp
test/: CMakeLists.txt
test/src/core/string/: test_string_compare.cpp  test_string_ends_with.cpp  test_string_fixed.cpp  test_string_join.cpp  test_string_lexical_cast.cpp  test_string_lexical_cast_stl.cpp  test_string_remove_prefix.cpp  test_string_replace.cpp  test_string_split.cpp  test_string_starts_with.cpp  test_string_string.cpp  test_string_tolower.cpp  test_string_trim.cpp
